--- a/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/indexGeneral.html
+++ b/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/indexGeneral.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>IndexGeneral</title>
   <link rel="stylesheet" href="./style.css">
   <script type="module" src=".js"></script>
     
 </head>
 <body>
   <main>
-    <h1>Titulo Principal</h1>
+    <h1>Indice General</h1>
     <div class="contenedor-productos" id="contenedor-productos">
+      <a href=".\form\indexForm.html">CRUD</a>
+      <a href=".\cards\indexCards.html">Ver Productos</a>
 
     </div>
   </main>
