--- a/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/cards/indexCards.html
+++ b/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/cards/indexCards.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cards</title>
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
   <script type="module" src="card.js"></script>
     
@@ -11,12 +12,13 @@
 <body>
   <main>
     <h1>Titulo Principal</h1>
-    <div class="contenedor-productos" id="contenedor-productos">
+    <div class="contenedor-productos w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700" id="contenedor-productos">
 
     </div>
     
   </main><br><br>
   <a href="..\indexGeneral.html">VOLVER</a>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 </body>
 </html>
 
