--- a/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/form/indexForm.html
+++ b/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/form/indexForm.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FORM</title>
+  <title>Formulario</title>
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
   <script type="module" src="form.js"></script>
     
@@ -47,6 +48,7 @@
     </tbody>
   </table>
   <a href="..\indexGeneral.html">VOLVER</a>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 
 
     
