--- a/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/indexGeneral.html
+++ b/Programacion Web I/Ejercicio LocalStorage/localStorage VERSION V - Clases/CRUD - LOCALSTORAGE - E-COMERCE - VERSION II/indexGeneral.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IndexGeneral</title>
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
   <script type="module" src=".js"></script>
     
@@ -17,4 +18,7 @@
 
     </div>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+</body>
+</html>
     
